--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,16 @@
 TODO
 
 Landscape
+Input
+	surfer physics
+		one button
+			inverted helicopter
+	Wave model
 Level editing and loading
 Artwork
 Animation
 	Wave
-Input
-	surfer physics
-		one button
-
-	Wave model
 Distance or time indicator
 Finger tap instruction
 	at wave
+Particle system
