--- a/todo.txt
+++ b/todo.txt
@@ -55,4 +55,4 @@ TODO
 	Particle system
 	Playtest
 	Music
-	Jumping Effect - 
+	Jumping Effect - No input while in air, but allow movement into space
