--- a/todo.txt
+++ b/todo.txt
@@ -66,6 +66,7 @@ TODO
 	Jumping Effect - No input while in air, but allow movement into space for Will and Josh.
 	Submit
 	Z-sort by vertical position.
+	Barrel riders not at top of wave.
 	Finger tap instruction
 		at wave
 	Playtest
