--- a/todo.txt
+++ b/todo.txt
@@ -80,7 +80,7 @@ DONE
 		Blend distance and player world x.
 		Wave doesn't start at random place.
 	Nityam plays middle levels a little more difficult.
-	Collin plays.
+	Colin plays.
 	Cameron plays.
 	Guan plays.
 	Guan reads "Hold to speed up" in water and sky.
@@ -88,6 +88,7 @@ DONE
 
 TODO
 
+	Guan jumps higher.
 	Polish wave crash sound as louder and longer.
 	Nityam sees first obstacles sooner.
 	Playtest
